--- a/Android/ProyectoADBJ/app/src/main/AndroidManifest.xml
+++ b/Android/ProyectoADBJ/app/src/main/AndroidManifest.xml
@@ -8,18 +8,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".menuDatosUsuario"></activity>
-        <activity android:name=".menuSubs" />
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".menuPago" />
+        <activity android:name=".menuDatosUsuario" />
+        <activity android:name=".menuRegistro" />
         <activity android:name=".menuPlanes" />
         <activity android:name=".menuInfo" />
         <activity android:name=".menuPrincipal" />
         <activity android:name=".MainActivity">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            android:theme="@style/AppTheme.NoActionBar"
         </activity>
     </application>
 
